networkpolicy-demo/centos.yaml
apiVersion: v1
kind: Pod
metadata:
  name: networkpolicy-test
  labels:
    role: test
spec:
  containers:
  - image: centos:7.5.1804
    name: centos
    command: [ "sleep", "1000000" ]
    imagePullPolicy: "IfNotPresent"
